infrastructure/aws/cloudformation/csye6225-cf-networking.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Resources": {
        "vpc": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "InstanceTenancy": "default",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "csye6225-vpc"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "csye6225-InternetGateway"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "csye6225-public-route-table"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            },
            "DependsOn": [
                "InternetGateway"
            ]
        },
        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "csye6225-private-route-table"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "SubnetForWebServers": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc"
                },
                "CidrBlock": "10.0.0.0/24",
                "MapPublicIpOnLaunch": true,
                "AvailabilityZone": "us-east-1b"
            }
        },
        "SubnetPublicRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "SubnetForWebServers"
                }
            }
        },
        "SubnetForDBServers": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc"
                },
                "CidrBlock": "10.0.1.0/24",
                "AvailabilityZone": "us-east-1e"
              }
        },
        "SubnetPrivateRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "SubnetForDBServers"
                }
            }
        },
        "SubnetForAutoScaling" : {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc"
                },
                "CidrBlock": "10.0.2.0/24",
                "MapPublicIpOnLaunch": true,
                "AvailabilityZone": "us-east-1a"
            }
        },
        "SubnetForAutoScalingAndPublicRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties" : {
              "RouteTableId": {
                  "Ref": "PublicRouteTable"
              },
              "SubnetId": {
                  "Ref": "SubnetForAutoScaling"
              }
            }
        },
        "csye6225webapp": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc"
                },
                "GroupDescription": "a security group for ec2 instances that will host web application",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8080",
                        "ToPort": "8080",
                        "SourceSecurityGroupId": {
                            "Ref": "SecurityGroupForLoadBalancer"
                        }
                    }
                ]
            }
        },
        "SecurityGroupForDBServers": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc"
                },
                "GroupDescription": "a security group for RDS instances",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "3306",
                        "ToPort": "3306",
                        "SourceSecurityGroupId": {
                            "Ref": "csye6225webapp"
                        }
                    }
                ]
            }
        },
        "SecurityGroupForLoadBalancer": {
          "Type" : "AWS::EC2::SecurityGroup",
          "Properties": {
            "GroupName" : "SecurityGroupForLoadBalancer",
            "VpcId": {
                "Ref": "vpc"
            },
            "GroupDescription": "a security group for application load balancer",
            "SecurityGroupIngress" : [{
                "FromPort" : 443,
                "ToPort" : 443,
                "IpProtocol" : "tcp",
                "CidrIp" : "0.0.0.0/0"
              }],
            "SecurityGroupEgress" : [{
                "FromPort" : 8080,
                "ToPort" : 8080,
                "IpProtocol" : "tcp",
                "CidrIp" : "0.0.0.0/0"
              }]
          }
        },
        "RDSSubnetGroup": {
            "Type": "AWS::RDS::DBSubnetGroup",
            "Properties": {
                "DBSubnetGroupDescription": "Subnets for RDS instances",
                "DBSubnetGroupName": "subnet-group",
                "SubnetIds": [
                    {
                        "Ref": "SubnetForDBServers"
                    },
                    {
                        "Ref": "SubnetForWebServers"
                    }
                ]
            }
        }
    }
}
